@@ -25,8 +25,8 @@ ttest.tstat(t, n1, n2 = 0, nullInterval = NULL, rscale = "medium",
 \value{
 If \code{simple} is \code{TRUE}, returns the Bayes factor (against the
 null). If \code{FALSE}, the function returns a
-vector of length 2 containing the computed log(e) Bayes factor,
-along with a proportional error estimate on the Bayes factor.
+vector of length 3 containing the computed log(e) Bayes factor,
+along with a proportional error estimate on the Bayes factor and the method used to compute it.
 }
 \description{
 Using the classical t test statistic for a one- or two-sample design, this
