@@ -6,6 +6,7 @@ CHANGES
   * Fixed bug causing regression Bayes factors to fail for very small R^2
   * Fixed bug disallowing expansion of dot (.) in generalTestBF model specifications
   * Fixed bug preventing cancelling of all analyses with interrupt
+  * All BFmodel objects have additional "analysis" slot giving details of analysis
 
   CHANGES IN BayesFactor VERSION 0.9.11-1
 
